# nanosvg

./: CMakeLists.txt
include/nanosvg/: nanosvg.h
src/: nanosvg.cpp
