cmake_minimum_required(VERSION 3.12)
project("nanosvg" LANGUAGES CXX VERSION 1.0.0
  DESCRIPTION "Simple stupid SVG parser"
  HOMEPAGE_URL "https://github.com/CodeFinder2/nanosvg")
include(GNUInstallDirs)

add_library(${PROJECT_NAME} src/nanosvg.cpp)
target_include_directories(${PROJECT_NAME} SYSTEM
  PUBLIC $<BUILD_INTERFACE:${${PROJECT_NAME}_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
target_compile_definitions(${PROJECT_NAME} PUBLIC NANOSVG_CPLUSPLUS)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME} DESTINATION include)
install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Config
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
export(TARGETS ${PROJECT_NAME} FILE ${PROJECT_NAME}Config.cmake)